fixed mobile layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+ 
  .jumbotron{
   background-image: linear-gradient(#17a2b8, transparent 99%),
   linear-gradient(20deg,#17a2b8, transparent), url(img/blue-internet-technology-background-header.jpg);
@@ -56,4 +58,15 @@ a.social:hover {
 /* Set the fixed height of the footer here */
 #footer {
   height: 60px;
+}
+
+.nav-link {
+  line-height: .25;
+
+}
+
+@media (min-width: 415px){
+  .nav-link {
+    line-height: 20px;
+  }
 }
